tests/neg/semantic_math_sin_bad_arity.baa
// EXPECT: عدد معاملات 'جيب' غير صحيح

صحيح الرئيسية() {
    عشري ق = جيب().
    إرجع ٠.
}
